--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,9 +4,15 @@ RUN     apt-get update && apt-get install -y systemd nginx vim openssl
 
 EXPOSE  80 443
 
-# RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx.key -out /etc/ssl/certs/nginx.crt -subj "/C=RU/ST=Moscow/L=Moscow/O=DVSGroup/OU=ogarthar/CN=https:\/\/github.com\/kirikova-k/emailAddress=dvs. kirickova.k@yandex.ru"
+# RUN   openssl req \
+        # -x509 \
+        # -nodes \ 
+        # -days 365 \
+        # -newkey rsa:2048 \
+        # -keyout /etc/ssl/private/nginx-selfsigned.key \
+        # -out /etc/ssl/certs/nginx-selfsigned.crt \
 
-RUN     rm /etc/nginx/nginx.conf
-COPY    ./nginx.conf /etc/nginx/nginx.conf
+COPY    ./srcs/default.conf /etc/nginx/conf.d/
+RUN     rm -rf /etc/nginx/sites-enabled/default
 
-# ENTRYPOINT ["nginx", "-g", "daemon off;"]
+CMD     ["nginx", "-g", "daemon off;"]
