protocl ssl done

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,13 +4,8 @@ RUN     apt-get update && apt-get install -y systemd nginx vim openssl
 
 EXPOSE  80 443
 
-# RUN   openssl req \
-        # -x509 \
-        # -nodes \ 
-        # -days 365 \
-        # -newkey rsa:2048 \
-        # -keyout /etc/ssl/private/nginx-selfsigned.key \
-        # -out /etc/ssl/certs/nginx-selfsigned.crt \
+RUN     mkdir -p /etc/nginx/ssl && openssl req -newkey rsa:2048 -x509 -days 365 -nodes -keyout /etc/nginx/ssl/services.key -out /etc/nginx/ssl/services.pem \
+        -subj "/C=FR/ST=Paris/L=Paris/O=42, Inc./OU=IT/CN=Inception"
 
 COPY    ./srcs/default.conf /etc/nginx/conf.d/
 RUN     rm -rf /etc/nginx/sites-enabled/default
