--- a/srcs/requirements/nginx/srcs/default.conf
+++ b/srcs/requirements/nginx/srcs/default.conf
@@ -1,8 +1,8 @@
 server {
 		listen 80;
 		listen [::]:80;
-		# listen 443 ssl;
-		# listen [::]:443 ssl;
+		listen 443 ssl;
+		listen [::]:443 ssl;
 	
   		server_name idouidi.42.fr;
 
@@ -13,7 +13,8 @@ server {
 			autoindex on;
 			try_files $uri $uri/ =404;
 		}
-		
+        ssl_certificate /etc/nginx/ssl/services.pem;
+        ssl_certificate_key /etc/nginx/ssl/services.key;		
 		# ssl on;
     	# ssl_certificate      /etc/ssl/certs/nginx-selfsigned.crt;
     	# ssl_certificate_key  /etc/ssl/private/nginx-selfsigned.key;
