--- a/srcs/requirements/nginx/config/default.conf
+++ b/srcs/requirements/nginx/config/default.conf
@@ -1,12 +1,10 @@
 server {
-		listen 80;
-		listen [::]:80;
 		listen 443 ssl;
 		listen [::]:443 ssl;
 	
   		server_name idouidi.42.fr;
 
-  		root /var/www/html;
+  		root /var/www/wordpress;
   		index index.php index.html index.htm index.nginx-debian.html;
 
 		location / {
@@ -15,11 +13,6 @@ server {
 		}
         ssl_certificate /etc/nginx/ssl/services.pem;
         ssl_certificate_key /etc/nginx/ssl/services.key;		
-		# ssl on;
-    	# ssl_certificate      /etc/ssl/certs/nginx-selfsigned.crt;
-    	# ssl_certificate_key  /etc/ssl/private/nginx-selfsigned.key;
-    	# ssl_protocols        SSLv3 TLSv1;
-    	# ssl_ciphers          HIGH:!aNULL:!MD5;
 
 		# error_page			497	https://$server_name:443$request_uri;
 
@@ -28,7 +21,7 @@ server {
 			#	# With php-fpm (or other unix sockets):
 				fastcgi_pass unix:/run/php/php7.3-fpm.sock;
 			#	# With php-cgi (or other tcp sockets):
-			#	fastcgi_pass 127.0.0.1:9000;
+				# fastcgi_pass 127.0.0.1:9000;
 		}
 
 		location ~ /\.{
