--- a/srcs/requirements/nginx/config/nginx.conf
+++ b/srcs/requirements/nginx/config/nginx.conf
@@ -4,25 +4,26 @@ server {
 	
   		server_name idouidi.42.fr;
 
-  		root /var/www/html;
+  		root /var/www/html/;
   		index index.php index.html index.htm;
 
-		location / {
-			autoindex on;
-			try_files $uri $uri/ =404;
-		}
         ssl_certificate /etc/nginx/ssl/services.pem;
         ssl_certificate_key /etc/nginx/ssl/services.key;		
+		
+    location / {
+		try_files	$uri $uri/ /index.php?$query_string;
+	}
 
-  		location ~ \.php$ {
-  		  fastcgi_pass wordpress:9000;
-		  fastcgi_index index.php;
-  		  include fastcgi_params;
-  		  fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-  		#   include snippets/fastcgi-php.conf;
-  		}
+	location = /404.html {
+		internal;
+	}
 
-		location ~ /\.{
-			deny all;
-   		}
+    location ~ \.php$ {
+        fastcgi_split_path_info	^(.+\.php)(/.+)$;
+        fastcgi_pass			wordpress:9000;
+        fastcgi_index			index.php;
+        include					fastcgi_params;
+        fastcgi_param			SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		try_files				$uri /index.php =404;
+    }
 	}
