--- a/srcs/requirements/nginx/config/nginx.conf
+++ b/srcs/requirements/nginx/config/nginx.conf
@@ -1,4 +1,6 @@
 server {
+		listen 80;
+		listen [::]:80;
 		listen 443 ssl;
 		listen [::]:443 ssl;
 	
@@ -10,12 +12,9 @@ server {
         ssl_certificate /etc/nginx/ssl/services.pem;
         ssl_certificate_key /etc/nginx/ssl/services.key;		
 		
-    location / {
-		try_files	$uri $uri/ /index.php?$query_string;
-	}
-
-	location = /404.html {
-		internal;
+	location / {
+		autoindex on;
+		try_files $uri $uri/ =404;
 	}
 
     location ~ \.php$ {
