fixe deploiement wp

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,16 +4,18 @@ DOMAINE=idouidi.42.fr
 #                     MARIADB                         #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
+DATADIR=/var/lib/mysql
+
 MYSQL_DATABASE_NAME=wordpress
 
 MYSQL_HOST=idouidi
 MYSQL_ROOT_PWD=idouidi
+MARIADB_PORT=3306
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                     WORDPRESS                       #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 
-DATADIR=/var/lib/mysql
 
 WP_TITLE="Inception"
 
