--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,8 +1,9 @@
 FROM debian:buster
 
-RUN apt-get update && apt-get upgrade -y && apt-get install -y mariadb-server mariadb-client
+RUN apt-get update && apt-get upgrade -y && apt-get install -y mariadb-server mariadb-client vim 
 
-COPY ./config/50-server.conf /etc/mysql/mariadb.conf.d
+EXPOSE 3306
+
 COPY  ./config/init.sh /tmp/init.sh
 
 RUN mkdir -p /run/mysqld /var/lib/mysql
@@ -11,7 +12,6 @@ RUN chmod 777 /run/mysqld
 RUN chown -R mysql:mysql /var/lib/mysql
 RUN chown -R mysql:mysql /run/mysqld
 
-EXPOSE 3306
 
 ENTRYPOINT ["bash", "/tmp/init.sh"]
 
