--- a/srcs/.env
+++ b/srcs/.env
@@ -6,10 +6,10 @@ DOMAINE=idouidi.42.fr
 
 DATADIR=/var/lib/mysql
 
-MYSQL_DATABASE_NAME=wordpress
+MARIADB_DATABASE=wordpress
 
-MYSQL_HOST=idouidi
-MYSQL_ROOT_PWD=idouidi
+MARIADB_HOST=idouidi
+ROOT_PASSWORD=idouidi
 MARIADB_PORT=3306
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -19,10 +19,6 @@ MARIADB_PORT=3306
 
 WP_TITLE="Inception"
 
-WP_ADMIN_USER=r_idouidi
-WP_ADMIN_PWD=r_idouidi
-WP_ADMIN_EMAIL=idouidi@student.42.fr
+WP_ADMIN_USER=a_idouidi
+WP_ADMIN_PWD=a_idouidi
 
-WP_USR=toto
-WP_PWD=toto
-WP_EMAIL=idouidi@student.42.fr
