--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -22,25 +22,25 @@ services:
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                     MARIADB                         #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-    # mariadb:
-    #     build: requirements/mariadb/
-    #     image: mariadb
-    #     container_name: mariadb
-    #     env_file:
-    #       - "./.env"
-    #     ports:
-    #       - "3306:3306"
-    #     volumes:
-    #       - db:/var/lib/mysql
-    #     networks:
-    #       - Inception
+    mariadb:
+        build: requirements/mariadb/
+        image: mariadb
+        container_name: mariadb
+        env_file:
+          - "./.env"
+        ports:
+          - "3306:3306"
+        volumes:
+          - db:/var/lib/mysql
+        networks:
+          - Inception
         # restart: always
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                     WORDPRESS                       #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
     wordpress:
-        # depends_on:
-        #   - mariadb
+        depends_on:
+          - mariadb
         build: requirements/wordpress/
         container_name: wordpress
         image: wordpress
