can't conect to db

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,24 +1,9 @@
-DOMAINE=idouidi.42.fr
-
-# # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#                     MARIADB                         #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # #
-
 DATADIR=/var/lib/mysql
 
-MARIADB_DATABASE=wordpress
+DB_NAME=wordpress
+DB_USER=idouidi
+DB_PASSWORD=idouidi
+DB_HOST=idouidi.42.fr
+DB_CHARSET=utf8
 
-MARIADB_HOST=idouidi
-ROOT_PASSWORD=idouidi
-MARIADB_PORT=3306
-
-# # # # # # # # # # # # # # # # # # # # # # # # # # # #
-#                     WORDPRESS                       #
-# # # # # # # # # # # # # # # # # # # # # # # # # # # #
-
-
-WP_TITLE="Inception"
-
-WP_ADMIN_USER=a_idouidi
-WP_ADMIN_PWD=a_idouidi
-
+ROOT_PASSWORD=toto
