gros fixe a faire

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -34,7 +34,7 @@ services:
           - db:/var/lib/mysql
         networks:
           - Inception
-        # restart: always
+        restart: always
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                     WORDPRESS                       #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # #
