--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -21,7 +21,7 @@ RUN     wget https://fr.wordpress.org/latest-fr_FR.tar.gz
 RUN     tar -zxf latest-fr_FR.tar.gz
 RUN     rm latest-fr_FR.tar.gz
 
-# RUN     rm /var/www/html/wordpress/wp-config-sample.php
+RUN     rm /var/www/html/wordpress/wp-config-sample.php
 COPY    ./config/wp-config.php /var/www/html/wordpress/wp-config-sample.php
 
 RUN     chown -R www-data:www-data /var/www/*
