try to implem wp cli

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,14 @@
 DATADIR=/var/lib/mysql
 
 DB_NAME=wordpress
+
+DB_ADMIN=a_idouidi
+DB_ADMIN_PASSWORD=a_idouidi
+
 DB_USER=idouidi
-DB_PASSWORD=idouidi
-DB_HOST=idouidi.42.fr
+DB_USER_PASSWORD=idouidi
+
+DB_HOST=localhost
 DB_CHARSET=utf8
 
 ROOT_PASSWORD=toto
