db can conect to wp, now try to autoset wp with the dump

--- a/srcs/.env
+++ b/srcs/.env
@@ -8,7 +8,7 @@ DB_ADMIN_PASSWORD=a_idouidi
 DB_USER=idouidi
 DB_USER_PASSWORD=idouidi
 
-DB_HOST=localhost
+DB_HOST=mariadb
 DB_CHARSET=utf8
 
 ROOT_PASSWORD=toto
