--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -9,12 +9,14 @@ RUN     apt-get -y update \
 EXPOSE 3306
 
 COPY  ./config/init.sh /tmp/init.sh
-COPY  ./config/init.sh /tmp/dump.sql
+COPY  ./config/wordpress.sql /tmp/wordpress.sql
 
 RUN mkdir -p /run/mysqld /var/lib/mysql
+
 RUN chmod 777 /var/lib/mysql
 RUN chmod 777 /run/mysqld
-RUN chown -R mysql:mysql /run/mysqld
+
+RUN chown -R mysql:mysql /var/run/mysqld
 RUN chown -R mysql:mysql /var/lib/mysql
 
 
