inception fix check admin/user into the db

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,12 +1,14 @@
-DB_NAME=wordpress
+MYSQL_DB_HOST=mariadb
+MYSQL_DB_ROOT_PASSWORD=toto
+MYSQL_DB_NAME=wordpress
 
-DB_ADMIN=a_idouidi
-DB_ADMIN_PASSWORD=a_idouidi
+WP_ADMIN=a_idouidi
+WP_ADMIN_PASSWORD=a_idouidi
+WP_ADMIN_EMAIL=admin@42.fr
 
-DB_USER=idouidi
-DB_USER_PASSWORD=idouidi
+WP_USER=idouidi
+WP_USER_PASSWORD=idouidi
+WP_USER_EMAIL=user@42.fr
 
-DB_HOST=mariadb
-DB_CHARSET=utf8
+WP_CHARSET=utf8
 
-ROOT_PASSWORD=toto
