--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,9 @@
 MYSQL_DB_HOST=mariadb
-MYSQL_DB_ROOT_PASSWORD=toto
 MYSQL_DB_NAME=wordpress
+MYSQL_DB_ROOT_PASSWORD=toto
 
-WP_ADMIN=a_idouidi
-WP_ADMIN_PASSWORD=a_idouidi
+WP_ADMIN=adm_idouidi
+WP_ADMIN_PASSWORD=adm_idouidi
 WP_ADMIN_EMAIL=admin@42.fr
 
 WP_USER=idouidi
